--- a/lib/medussa_studio_web/templates/user_session/new.html.heex
+++ b/lib/medussa_studio_web/templates/user_session/new.html.heex
@@ -28,4 +28,5 @@
       <%= checkbox f, :remember_me, class: ["w-4 h-4 bg-emerald-500 rounded border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"] %>
     </div>
   </.form>
+  <div id="notification" phx-hook="Notification"></div>
 </div>
